<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.saphyra</groupId>
    <artifactId>apphub</artifactId>
    <version>1.0-SNAPSHOT</version>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.1</version>
        <relativePath/>
    </parent>

    <name>apphub-parent</name>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>

        <!-- Platform Versions -->
        <versions.spring-boot>3.0.1</versions.spring-boot>
        <versions.spring-cloud-gateway>4.0.0</versions.spring-cloud-gateway>
        <versions.spring-cloud-openfeign>4.0.0</versions.spring-cloud-openfeign>
        <versions.liquibase-core>4.18.0</versions.liquibase-core>
        <versions.postgresql-connector>42.5.1</versions.postgresql-connector>
        <versions.exec-maven-plugin>3.1.0</versions.exec-maven-plugin>

        <!-- Lib Versions -->
        <versions.apache-commons.commons-io>2.11.0</versions.apache-commons.commons-io>
        <versions.apache-commons.commons-lang3>3.9</versions.apache-commons.commons-lang3>
        <versions.apache-commons.commons-net>3.6</versions.apache-commons.commons-net>
        <versions.assertj-core>3.24.1</versions.assertj-core>
        <versions.h2>2.1.214</versions.h2>
        <versions.jackson-core>2.14.1</versions.jackson-core>
        <versions.junit>5.9.2</versions.junit>
        <versions.maven-surefire-plugin>3.0.0-M8</versions.maven-surefire-plugin>
        <versions.mockito>4.11.0</versions.mockito>
        <versions.byte-buddy>1.12.22</versions.byte-buddy>
        <versions.rest-assured>5.3.0</versions.rest-assured>
        <versions.selenium>4.7.2</versions.selenium>
        <versions.testng>7.7.1</versions.testng>
        <versions.thymeleaf-spring>3.1.1.RELEASE</versions.thymeleaf-spring>
        <versions.logback>1.4.5</versions.logback>
        <versions.tomcat-util>8.5.23</versions.tomcat-util>
        <versions.guava>33.4.8-jre</versions.guava>
        <versions.openfeign>12.1</versions.openfeign>
        <versions.gson>2.8.9</versions.gson>
        <versions.java-websocket>1.5.1</versions.java-websocket>
        <versions.apache-commons-pool>2.9.0</versions.apache-commons-pool>
        <versions.jakartaValidationApi>3.0.2</versions.jakartaValidationApi>
        <versions.jakartaServletApi>6.0.0</versions.jakartaServletApi>
        <versions.jaxbApi>2.4.0-b180830.0359</versions.jaxbApi>
        <versions.awaitility>4.2.0</versions.awaitility>
        <versions.java-websocket>1.5.3</versions.java-websocket>

        <!-- Plugin Versions -->
        <versions.maven-compiler-plugin>3.10.1</versions.maven-compiler-plugin>
        <versions.lombok>1.18.24</versions.lombok>
        <versions.lombok-maven>1.18.20.0</versions.lombok-maven>
        <versions.logback-contrib>0.1.5</versions.logback-contrib>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${versions.lombok}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok-maven</artifactId>
            <version>${versions.lombok-maven}</version>
            <type>pom</type>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${versions.logback}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback.contrib</groupId>
            <artifactId>logback-json-classic</artifactId>
            <version>${versions.logback-contrib}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback.contrib</groupId>
            <artifactId>logback-jackson</artifactId>
            <version>${versions.logback-contrib}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${versions.apache-commons.commons-lang3}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${versions.jackson-core}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-jaxb-annotations</artifactId>
            <version>${versions.jackson-core}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${versions.jackson-core}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>apphub-service</module>
        <module>apphub-api</module>
        <module>apphub-lib</module>
        <module>apphub-test</module>
    </modules>
</project>